# cobrafuzz

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  makefile.yml
cobrafuzz/: common.py  corpus.py  dictionary.py  fuzzer.py  main.py  mutator.py  prune.py  simplifier.py  state.py  tracer.py  util.py
examples/aifc/: fuzz.py
examples/beautifulsoup/: fuzz.py
examples/codeop/: fuzz.py
examples/furl/: fuzz.py
examples/fuzz_aifc/: README.md  fuzz.py
examples/fuzz_bs/: README.md  fuzz.py
examples/fuzz_charset_normalizer/: fuzz.py
examples/fuzz_cobrafuzz/: fuzz.py
examples/fuzz_codeop/: README.md  fuzz.py
examples/fuzz_codeop/seeds/: 100doors.py  99bottles.py  a_plus_b.py  ackermann.py  comments.py  conditional.py  factorial.py  fibonacci.py  fizzbuzz.py  forloop.py  function_definition.py  infinite.py  unicode_reversal.py
examples/fuzz_dateutil/: download_seeds.sh  fuzz.py
examples/fuzz_furl/: fuzz.py
examples/fuzz_htmlparser/: fuzz.py
examples/fuzz_idna/: download_seeds.sh  fuzz.py
examples/fuzz_isort/: fuzz.py
examples/fuzz_purl/: fuzz.py
examples/fuzz_recordflux/: README.md  fuzz.py
examples/fuzz_requests/: fuzz.py
examples/fuzz_xml/: fuzz.py
examples/fuzz_zipfile/: fuzz.py
examples/fuzz_zlib/: fuzz.py
examples/fuzzit/: fuzz.py
examples/htmlparser/: fuzz.py
examples/isort/: fuzz.py
examples/purl/: fuzz.py
examples/xml/: fuzz.py
examples/zipfile/: fuzz.py
examples/zlib/: fuzz.py
pythonfuzz/: corpus.py  fuzzer.py  main.py
stubs/scipy/: stats.pyi
tests/: fuzz_fuzzer.py  test_doc.py  utils.py
tests/integration/: test_crash.py  test_examples.py  test_fuzzer.py  test_main.py  test_nocrash.py  test_simplifier.py  test_util.py
tests/performance/: bench.py  fuzz.py
tests/unit/: test_copy.py  test_corpus.py  test_fuzzer.py  test_fuzzer_fail.py  test_main.py  test_mutator.py  test_prune.py  test_simplifier.py  test_state.py  test_tracer.py  test_util.py
